--- a/styles/global.css
+++ b/styles/global.css
@@ -35,6 +35,10 @@ nav .menu a {
   font-size: 1em;
 }
 
+nav .menu a:hover {
+  color: #6ac4b3;
+}
+
 .hero {
   text-align: center;
   padding: 50px 0;
@@ -59,4 +63,14 @@ footer {
   padding: 20px 0;
   background-color: #333;
   color: #fff;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1;
 }
